--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
